<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.fragments.tabs.PlaceholderFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.example.mmrdata.MMRSetupActivityFragment"
            tools:showIn="@layout/activity_tab_wearables">

            <TextView
                android:id="@+id/mmr_mac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/data_from"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/mmr_value_mac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/mmr_mac"
                android:text="@string/ellipsis"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"/>

            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_button"
                android:id="@+id/mmr_acc_start"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/mmr_value_mac"
                />

            <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_button"
                android:id="@+id/mmr_acc_stop"
                android:layout_below="@id/mmr_acc_start"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="12dp"
                />

            <TextView
                android:id="@+id/mmr_lab_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mmr_acc_stop"
                android:text="@string/temperature"
                android:textAlignment="viewStart"
                android:layout_gravity="start"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/mmr_value_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mmr_acc_stop"
                android:layout_toRightOf="@id/mmr_lab_temp"
                android:text="@string/triple_0"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mmr_lab_illum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mmr_lab_temp"
                android:text="@string/illuminance"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/mmr_value_illum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mmr_value_temp"
                android:layout_toRightOf="@id/mmr_lab_illum"
                android:text="@string/triple_0"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mmr_lab_alt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mmr_lab_illum"
                android:text="@string/altitude"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/mmr_value_alt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mmr_value_illum"
                android:layout_toRightOf="@+id/mmr_lab_alt"
                android:text="@string/triple_0"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mmr_lab_arm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mmr_lab_alt"
                android:text="@string/arm_angle"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/mmr_value_arm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mmr_value_alt"
                android:layout_toRightOf="@id/mmr_lab_arm"
                android:text="@string/triple_0"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mmr_lab_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mmr_lab_arm"
                android:text="@string/acceleration"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/mmr_value_acc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mmr_lab_acc"
                android:text="@string/acceleration_init"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mmr_lab_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mmr_value_acc"
                android:text="@string/location"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/mmr_value_gps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mmr_lab_gps"
                android:text="'lat':'0.000000', 'lng':'0.000000'"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabMMRfav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/fab_margin"
                app:srcCompat="@android:drawable/btn_star_big_off" />
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>